BJS2-45228 Двойной кэш-кэш Переделал по рекомендациям!